# curie-build

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  wrangler.toml
curie-build/: Cargo.toml  build.rs
curie-build/javac-wrapper/: Wrapper.java
curie-build/src/: audit.rs  build.rs  class_manifest.rs  compile.rs  config.rs  deps.rs  descriptor.rs  docker.rs  fmt.rs  git.rs  incremental.rs  jar.rs  kt_stale.rs  main.rs  main_class.rs  native.rs  new.rs  pom_writer.rs  publish.rs  run.rs  sources_jar.rs  test.rs  update.rs  workspace.rs  wrapper.rs
curie-deps/: Cargo.toml
curie-deps/src/: gav.rs  lib.rs  pom.rs  repo.rs  resolver.rs
docs/: RATIONALE.md
examples/: .envrc  Curie.toml
examples/auto-value-demo/: Curie.toml
examples/auto-value-demo/src/com.example.av/: Animal.java  Main.java
examples/google-mirror-demo/: Curie.toml
examples/google-mirror-demo/src/com.example/: MirrorDemo.java
examples/graalvm-hello/: Curie.toml
examples/graalvm-hello/src/com.example/: Hello.java
examples/groovy-greeter/: Curie.toml
examples/groovy-greeter/src/com.example/: GroovyGreeter.groovy
examples/hello-kotlin/: Curie.toml
examples/hello-mixed/: Curie.toml
examples/hello-mixed/src/com.example.mixed/: Greeting.kt  Main.java
examples/hello-mixed/tests/com.example.mixed/: GreetingTest.java
examples/hello-world/: Curie.toml  curie.toml
examples/hello-world-flat/: curie.toml
examples/hello-world-flat/src/com.example/: HelloWorld.java
examples/jackson-bom-greeter/: Curie.toml  curie.toml
examples/jackson-bom-greeter-flat/: Curie.toml
examples/jackson-bom-greeter/src/com.example/: JacksonBomGreeter.java
examples/jackson-bom-greeter/tests/com.example/: JacksonBomGreeterTest.java
examples/json-greeter/: Curie.toml  curie.toml
examples/json-greeter-flat/: curie.toml
examples/json-greeter/src/com.example/: JsonGreeter.java
examples/lombok-greeter/: Curie.toml
examples/lombok-greeter/src/com.example.lombok/: Greeting.java  Main.java
examples/maven-hello-world/: Curie.toml  curie.toml
examples/maven-jackson-bom-greeter/: Curie.toml
examples/maven-json-greeter/: Curie.toml
examples/maven-string-utils/: Curie.toml
examples/publish-demo/: Curie.toml
examples/publish-demo/src/com.example/: Greeter.java
examples/shibboleth-demo/: Curie.toml
examples/simplified-main/: Curie.toml
examples/simplified-main/src/: Hello.java
examples/spock-demo/: Curie.toml
examples/spring-boot-demo/: Curie.toml
examples/string-utils/: Curie.toml  curie.toml
examples/string-utils-cli/: Curie.toml
web/: getting-started.html  index.html
web/docs/: audit.html  deps.html  docker.html  fmt.html  groovy.html  incremental.html  index.html  kotlin.html  native.html  publish.html  resolver.html  scaffold.html  testing.html  workspaces.html
web/scripts/: main.js
web/styles/: main.css
(+27 files in other folders)
