[package]
name = "curie-build"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "curie"
path = "src/main.rs"

[dependencies]
toml = "1.1"
serde = { version = "1", features = ["derive"] }
walkdir = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
zip = { version = "8", default-features = false, features = ["deflate"] }
curie-deps = { path = "../curie-deps" }
indicatif = "0.18"

[build-dependencies]
sha2 = "0.11"

[dev-dependencies]
tempfile = "3"
filetime = "0.2"
