[package]
name = "curie-build"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://curie-build.org"
description = "The Curie build tool"
build = "build.rs"

[[bin]]
name = "curie"
path = "src/main.rs"

[dependencies]
toml = "1.1"
toml_edit = "0.22"
serde = { version = "1", features = ["derive"] }
walkdir = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
zip = { version = "8", default-features = false, features = ["deflate"] }
curie-deps = { version = "0.1.0", path = "../curie-deps" }
indicatif = "0.18"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls"] }
sha1 = "0.11"
sha2 = "0.11"
which = "6"

[build-dependencies]
sha2 = "0.11"

[dev-dependencies]
tempfile = "3"
filetime = "0.2"
