[package]
name = "curie-deps"
version = "0.1.0"
edition = "2021"
description = "Maven dependency resolution for the Curie build tool"

[dependencies]
anyhow = "1"
indicatif = "0.17"
quick-xml = { version = "0.37", features = ["serialize"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
